--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -1,3 +1,6 @@
+@import "bootstrap-sprockets";
+@import "bootstrap";
+
 /* Custom Styles */
 
 
@@ -76,7 +79,7 @@ a {
     margin-left: 65px;
 }
 
-.table-hover>tbody>tr:hover {
+.table-hover tbody tr:hover {
     background-color: #22ADC9;
 }
 
