Changes to admin1, admin2, admin3, users_controller, user.rb, and routes.

--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -14,11 +14,11 @@
       Accounts <span class="caret"></span>
     </a>
                     <ul class="dropdown-menu">
-                        <li><a href="/admin/admin1">Settings</a></li>
+                        <li><a href="/users/admin1">Settings</a></li>
                         <li><a href="/">Logout</a></li>
                     </ul>
                 </li>
-                <li role="presentation"><a href="/admin/admin1">Admin</a></li>
+                <li role="presentation"><a href="/users/admin1">Admin</a></li>
             </ul>
         </div>
     </div>
