--- a/app/views/pages/template.html
+++ b/app/views/pages/template.html
@@ -36,7 +36,7 @@
                         <li><a href="/index.html">Logout</a></li>
                     </ul>
                 </li>
-                <li role="presentation"><a href="/pages/admin/admin1.html">Admin</a></li>
+                <li role="presentation"><a href="/users/admin1.html">Admin</a></li>
             </ul>
         </div>
     </div>
