--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -11,7 +11,28 @@
         <div class="row">
             <div class='col-md-4 col-md-offset-4 col-sm-6 col-sm-offset-3 col-xs-8 col-xs-offset-2 well'>
                 <h4 class="text-center">Add New User</h4>
-                <form>
+                
+                <%= form_for(@user) do |f| %>
+                  
+                  <%= f.label :user_id %>
+                  <%= f.text_field :user_id, class: 'form-control' %>
+                  
+                  <%= f.label :user_name %>
+                  <%= f.text_field :user_name, class: 'form-control' %>
+                  
+                  <%= f.label :user_email %>
+                  <%= f.email_field :user_email, class: 'form-control' %>
+                  
+                  <%= f.label :password %>
+                  <%= f.password_field :password, class: 'form-control' %>
+                  
+                  <%= f.label :password_confirmation, "Confirmation" %>
+                  <%= f.password_field :password_confirmation, class: 'form-control' %>
+                  
+                  <%= f.submit "Create Account", class: 'btn btn-success btn-wide extra-right-margin' %>
+                  <%= link_to "Cancel", users_admin1_path, class: 'btn btn-danger btn-wide' %>
+                <% end %>
+                <!---<form>
                     <div class="form-group">
                         <label for="newUser">New User: </label>
                         <input type="text" class="form-control" id="newUser">
@@ -37,14 +58,14 @@
                         <input type="password" class="form-control" id="passConfirm">
                     </div>
                     <div class="form-group">
-                        <a href="/admin/admin1">
+                        <a href="/users/admin1">
                             <btn class="btn btn-success btn-wide extra-right-margin">OK</btn>
                         </a>
-                        <a href="/admin/admin1">
+                        <a href="/users/admin1">
                             <btn class="btn btn-danger btn-wide">Cancel</btn>
                         </a>
                     </div>
-                </form>
+                </form>--->
 
             </div>
         </div>
