Able to add users

--- a/app/views/users/admin1.html.erb
+++ b/app/views/users/admin1.html.erb
@@ -31,8 +31,8 @@
                     <thead>
                         <tr>
                             <th>Name</th>
-                            <th>id</th>
-                            <th>email</th>
+                            <th>ID</th>
+                            <th>Email</th>
                         </tr>
                     </thead>
                     <tbody>
