--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -11,6 +11,8 @@
         <div class="row">
             <div class='col-md-4 col-md-offset-4 col-sm-6 col-sm-offset-3 col-xs-8 col-xs-offset-2 well'>
                 <h4 class="text-center">Manage User</h4>
+                
+                <!---Create a form to update the user's password and permission level--->
                 <%= form_for(@user) do |f| %>
             
                   <h5>User Name: <%= @user.user_name %></h5>
@@ -23,51 +25,14 @@
                   <%= f.password_field :password_confirmation, class: 'form-control' %>
                   <br>
                   <%= f.label :permission_level %>
+                  
+                  <!---Set drop-down options and values per the array--->
                   <%= f.select :permission_level, User.permission_levels.keys.to_a %>
             
                   <%= f.submit "Save changes", class: "btn btn-primary" %>
                   <%= link_to "Cancel", users_admin1_path, class: 'btn btn-danger btn-wide' %>
                   
                 <% end %>
-                <!---<form>
-                    <h5>User ID: </h5>
-                    <div class="form-group">
-                        <h5>Change Password</h5>
-                        <label for="pNew">New Password: </label>
-                        <input type="password" class="form-control" id="pNew">
-                    </div>
-                    <div class="form-group">
-                        <label for="pConf">Confirm Password: </label>
-                        <input type="password" class="form-control" id="pConf">
-                    </div>
-                    <div class="form-group">
-                        <a href="/admin/admin3">
-                            <btn class="btn btn-success btn-wide extra-right-margin">Update Password</btn>
-                        </a>
-                    </div>
-                    <div class="form-group">
-                        <h5>Change User Type</h5>
-                        <label for="userType">User Type: </label>
-                        <select class="form-control">
-                            <option value="standard">Standard</option>
-                            <option value="admin">Admin</option>
-                            <option value="entry">Entry</option>
-                        </select>
-                    </div>
-                    <div class="form-group">
-                        <a href="/users/admin3">
-                            <btn class="btn btn-success btn-wide extra-right-margin">Update Type</btn>
-                        </a>
-                    </div>
-                    <br>
-                    <center>
-                        <div class="form-group">
-                            <a href="/users/admin1">
-                                <btn class="btn btn-danger btn-wide">Remove User</btn>
-                            </a>
-                        </div>
-                    </center>
-                </form>--->
 
             </div>
         </div>
