--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -12,6 +12,7 @@
             <div class='col-md-4 col-md-offset-4 col-sm-6 col-sm-offset-3 col-xs-8 col-xs-offset-2 well'>
                 <h4 class="text-center">Add New User</h4>
                 
+                <!---Create form for adding new user--->
                 <%= form_for(@user) do |f| %>
                   
                   <%= f.label :user_id %>
@@ -24,6 +25,8 @@
                   <%= f.email_field :user_email, class: 'form-control' %>
                   
                   <%= f.label :permission_level %>
+                  
+                  <!---Set drop-down options and values per the array--->
                   <%= f.select :permission_level, User.permission_levels.keys.to_a %>
                   <br>
                   <%= f.label :password %>
@@ -35,40 +38,6 @@
                   <%= f.submit "Create Account", class: 'btn btn-success btn-wide extra-right-margin' %>
                   <%= link_to "Cancel", users_admin1_path, class: 'btn btn-danger btn-wide' %>
                 <% end %>
-                <!---<form>
-                    <div class="form-group">
-                        <label for="newUser">New User: </label>
-                        <input type="text" class="form-control" id="newUser">
-                    </div>
-                    <div class="form-group">
-                        <label for="email">Email: </label>
-                        <input type="email" class="form-control" id="email">
-                    </div>
-                    <div class="form-group">
-                        <label for="userType">User Type: </label>
-                        <select class="form-control">
-                            <option value="standard">Standard</option>
-                            <option value="admin">Admin</option>
-                            <option value="entry">Entry</option>
-                        </select>
-                    </div>
-                    <div class="form-group">
-                        <label for="password">Password: </label>
-                        <input type="password" class="form-control" id="password">
-                    </div>
-                    <div class="form-group">
-                        <label for="passConfirm">Confirm Password: </label>
-                        <input type="password" class="form-control" id="passConfirm">
-                    </div>
-                    <div class="form-group">
-                        <a href="/users/admin1">
-                            <btn class="btn btn-success btn-wide extra-right-margin">OK</btn>
-                        </a>
-                        <a href="/users/admin1">
-                            <btn class="btn btn-danger btn-wide">Cancel</btn>
-                        </a>
-                    </div>
-                </form>--->
 
             </div>
         </div>
