--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -37,8 +37,8 @@
                         </tr>
                     </thead>
                     <tbody>
-                        <%= will_paginate %>
                         <!---Displays each user in a row--->
+                        <%= render 'layouts/flash_message' %>
                         <% @users.each do |user| %>
                         <tr>
                             <!---Each user's name and email link to their edit page--->
@@ -57,7 +57,7 @@
                             </td>
                         </tr>
                         <% end %>
-                        <%= will_paginate %>
+                        
                     </tbody>
                 </table>
             </div>
