--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -36,7 +36,7 @@
                   <%= f.password_field :password_confirmation, class: 'form-control' %>
                   
                   <%= f.submit "Create Account", class: 'btn btn-success btn-wide extra-right-margin' %>
-                  <%= link_to "Cancel", users_admin1_path, class: 'btn btn-danger btn-wide' %>
+                  <%= link_to "Cancel", users_index_path, class: 'btn btn-danger btn-wide' %>
                 <% end %>
 
             </div>
