Added form validation and flash messages

--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -14,20 +14,25 @@
                 
                 <!---Create a form to update the user's password and permission level--->
                 <%= form_for(@user) do |f| %>
-                
+                  <%= render 'layouts/flash_message' %>
+                  
                   <h5>User Name: <%= @user.user_name %></h5>
                   <h5>User ID: <%= @user.user_id %></h5>
-            
+                  
+                  <%= f.label :permission_level %>
+                  
+                  <!---Set drop-down options and values per the array--->
+                  <%= f.select :permission_level, User.permission_levels.keys.to_a, :include_blank => true %>
+                
+                  <br>
+                
                   <%= f.label :password %>
                   <%= f.password_field :user_password_digest, class: 'form-control' %>
             
                   <%= f.label :password_confirmation, "Confirmation" %>
                   <%= f.password_field :password_confirmation, class: 'form-control' %>
-                  <br>
-                  <%= f.label :permission_level %>
                   
-                  <!---Set drop-down options and values per the array--->
-                  <%= f.select :permission_level, User.permission_levels.keys.to_a %>
+                  <br>
             
                   <%= f.submit "Save changes", class: "btn btn-primary" %>
                   <%= link_to "Cancel", users_index_path, class: 'btn btn-danger btn-wide' %>
