--- a/app/views/pages/schedule/schedule1.html.erb
+++ b/app/views/pages/schedule/schedule1.html.erb
@@ -8,7 +8,7 @@
     <%= render 'layouts/navbar' %>
 
     <div class='container white-container'>
-
+        <%= render 'layouts/flash_messages' %>
         <div class="row">
             <div class="col-xs-10 col-xs-offset-1">
                 <h2>Schedule</h2>
@@ -24,52 +24,32 @@
             </div>
         </div>
         <br />
-        <div class="row">
+        
+        <!-- Need to make it look nice and build tests-->
+        <div class="pagination">
             <div class="col-xs-10 col-xs-offset-1">
-                <table class="table table-hover table-striped">
+                <table class="table table-hover table-striped table-responsive">
                     <thead>
                         <tr>
                             <th>Date</th>
-                            <th>Pickup Quantity</th>
+                            <th>Number of Pickups</th>
                             <th>Towns</th>
                         </tr>
                     </thead>
-                    <tbody>
-                        <tr>
-                            <td>Tue April 5</td>
-                            <td>6 Pickups</td>
-                            <td>Oak Brook, Lombard, Villa Park</td>
-                        </tr>
-                        <tr onclick="window.document.location='/schedule/schedule3';">
-                            <td>Tue April 12</td>
-                            <td>4 Pickups</td>
-                            <td>Lisle, Naperville, Downers Grove, Rockford, Glen Ellyn, ...</td>
-                        </tr>
-                        <tr>
-                            <td>Fri April 15</td>
-                            <td>No Pickups</td>
-                            <td></td>
-                        </tr>
-                        <tr>
-                            <td>Fri April 22</td>
-                            <td>1 Pickup</td>
-                            <td>Westmont</td>
-                        </tr>
-                        <tr>
-                            <td>Tue May 3</td>
-                            <td>No Pickups</td>
-                            <td></td>
-                        </tr>
-                        <tr>
-                            <td>Thu May 5</td>
-                            <td>3 Pickups</td>
-                            <td>Woodridge, Lemont</td>
-                        </tr>
+                    <tbody class="days">
+                        <%= will_paginate %>
+                        <% @days.each do |day| %>
+                            <tr onclick="location.href='<%= url_for day %>'" >
+                                <td><%=day.date.to_date.strftime('%a %b %d') %></td>
+                                <td><%=pluralize(day.number_of_pickups, 'Pickup') %></td>
+                                <td><%=day.getTowns.to_s %></td>
+                            </tr>
+                        <% end %>      
+                        <%= will_paginate %>
                     </tbody>
                 </table>
             </div>
         </div>
-
     </div>
 
 </body>
