Push bad code to personal repository - if on master, deny merge

--- a/app/views/pages/reports/report2.html.erb
+++ b/app/views/pages/reports/report2.html.erb
@@ -12,7 +12,7 @@
                 <form>
                     <div class="form-group">
                         Month:
-                        <select class="extra-right-margin form-control">
+                        <select name = "month" class="extra-right-margin form-control">
                             <option value="01">January</option>
                             <option value="02">February</option>
                             <option value="03">March</option>
@@ -29,7 +29,7 @@
                     </div>
                     <div class="form-group">
                         Year:
-                        <select class="form-control">
+                        <select name = "year" class="form-control">
                             <option value="2016">2016</option>
                             <option value="2015">2015</option>
                             <option value="2014">2014</option>
@@ -39,7 +39,7 @@
 
                     <div class="form-group">
                         Save As:
-                        <input type="text" class="form-control" placeholder="example.csv">
+                        <input name = "fileName" type="text" class="form-control" placeholder="example.csv">
                     </div>
                     <div class="form-group">
                         <a href="/donor.csv">
