--- a/app/views/pages/reports/report3.html.erb
+++ b/app/views/pages/reports/report3.html.erb
@@ -15,7 +15,7 @@
                 <form>
                     <div class="form-group">
                         Pickup Day:
-                        <select class="form-control">
+                        <select name = "pickUpDay" class="form-control">
                             <option value="May 5">May 5</option>
                             <option value="May 3">May 3</option>
                             <option value="April 22">April 22</option>
@@ -27,10 +27,10 @@
                     <br>
                     <div class="form-group">
                         Save As:
-                        <input type="text" class="form-control" placeholder="example.pdf">
+                        <input name = "fileName" type="text" class="form-control" placeholder="example.pdf">
                     </div>
                     <div class="form-group">
-                        <a href="/reports/report1">
+                        <a href="/reports/report3.pdf">
                             <btn class="btn btn-success btn-wide extra-right-margin">OK</btn>
                         </a>
                         <a href="/reports/report1">
