--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -7,20 +7,26 @@
                 </div>
             </div>
             <ul class="nav nav-pills navbar-right custom-navbar">
-
-                <li role="presentation" class="active"><a href="/pickups">Home</a></li>
-
-                <li role="presentation"><a href="/schedule/schedule1">Schedule</a></li>
-                <li role="presentation"><a href="/reports/report1">Reports</a></li>
-                <li role="presentation" class="dropdown"> <a class="dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">
-      Accounts <span class="caret"></span>
-    </a>
-                    <ul class="dropdown-menu">
-                        <li><a href="/users/index">Settings</a></li>
-                        <li><a href="/">Logout</a></li>
-                    </ul>
-                </li>
-                <li role="presentation"><a href="/users/index">Admin</a></li>
+                <% if user_logged_in %>
+                    <li role="presentation" class="active"><a href="/pickups">Home</a></li>
+                    <% if is_user_reg? || is_user_admin %>
+                        <li role="presentation"><a href="/schedule/schedule1">Schedule</a></li>
+                        <li role="presentation"><a href="/reports/report1">Reports</a></li>
+                    <% end %>
+                    
+                    <li role="presentation" class="dropdown"> 
+                        <a class="dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">
+                              Accounts <span class="caret"></span>
+                        </a>
+                        <ul class="dropdown-menu">
+                            <li><a href="/users/index">Settings</a></li>
+                            <li><a href="/">Logout</a></li>
+                        </ul>
+                    </li>
+                    <% if is_user_admin? %>
+                        <li role="presentation"><a href="/users/index">Admin</a></li>
+                    <% end %>
+                <% end %>
             </ul>
         </div>
     </div>
