changed column date to name in schedule3

--- a/app/views/pages/schedule/schedule3.html.erb
+++ b/app/views/pages/schedule/schedule3.html.erb
@@ -21,7 +21,7 @@
                     <thead>
                         <tr>
                             <th>id</th>
-                            <th>Date</th>
+                            <th>Name</th>
                             <th>Num Items</th>
                             <th>Item Notes</th>
                         </tr>
