--- a/app/views/reports/donor.html.erb
+++ b/app/views/reports/donor.html.erb
@@ -22,7 +22,7 @@
       <br>
       <div class="form-group">
       <%= submit_tag 'Export', class: 'btn btn-success btn-wide extra-right-margin' %>
-      <%= link_to 'Cancel', '/reports', class: 'btn btn-danger btn-wide'%>
+      <%= link_to 'Cancel', '/reports/report1', class: 'btn btn-danger btn-wide'%>
       </div>
       <% end %>
     </div>
