--- a/app/views/reports/truck.html.erb
+++ b/app/views/reports/truck.html.erb
@@ -19,7 +19,7 @@
         <%= label_tag 'csv', '&nbsp;MapQuest Route'.html_safe %>
       <br><br>
       <%=button_tag 'Export', type: 'submit', id: 'exportButton', class: 'btn btn-success btn-wide extra-right-margin'  %>
-      <%= link_to 'Cancel', '/reports', class: 'btn btn-danger btn-wide'%>
+      <%= link_to 'Cancel', '/reports/report1', class: 'btn btn-danger btn-wide'%>
      <% end %>
     </div>
   </div>
