Grabing Eric Z's stuff

--- a/app/views/pages/schedule/schedule1.html.erb
+++ b/app/views/pages/schedule/schedule1.html.erb
@@ -8,7 +8,7 @@
     <%= render 'layouts/navbar' %>
 
     <div class='container white-container'>
-        <%= render 'layouts/flash_messages' %>
+        <%= render 'layouts/flash_message' %>
         <div class="row">
             <div class="col-xs-10 col-xs-offset-1">
                 <h2>Schedule</h2>
