--- a/app/views/pages/schedule/schedule2.html.erb
+++ b/app/views/pages/schedule/schedule2.html.erb
@@ -58,7 +58,7 @@ function daySelected()//handle day selected by dropdown //doesnt work!!!
     <%= render 'layouts/navbar' %>
 
     <div class="container white-container">
-        <%= render 'layouts/flash_messages' %>
+        <%= render 'layouts/flash_message' %>
         <div class="row">
             <div class="col-xs-5 col-xs-offset-1">
                 <h4 class="text-center">Select a day to add it to the schedule.</h4>
