forcing it to work

--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -2,7 +2,7 @@
         <div class='container-fluid'>
             <div class='navbar-header'>
                 <div class='navbar-brand'>
-                    <a id='logo' href='/home/home1'><img id='logoImg' src="/assets/SC_logo.png" alt="Sharing Connections Logo"></img>
+                    <a id='logo' href='/pickups'><img id='logoImg' src="/assets/SC_logo.png" alt="Sharing Connections Logo"></img>
                     </a>
                 </div>
             </div>
