--- a/app/views/auth/new.html.erb
+++ b/app/views/auth/new.html.erb
@@ -6,7 +6,7 @@
             <h4 class="text-center">Log in to Sharing Connections<br> Pickup Assistant</h4>
             <br>
                 <%= form_for(:session, url: login_path) do |f| %>
-                <%= render 'layouts/flash_messages' %>
+                <%= render 'layouts/flash_message' %>
                 <div class="form-group">
                     <%= f.label :user_id %>
                     <%= f.text_field :user_id, class: 'form-control' %>
